place interlocks added

--- a/cfg/dynamic_params.cfg
+++ b/cfg/dynamic_params.cfg
@@ -6,11 +6,11 @@ from dynamic_reconfigure.parameter_generator_catkin import *
  
 gen = ParameterGenerator()
 gen.add("cart_id", str_t, 0, "Cart id for docking", "KLT_1_neu") # default KLT_1_neu
-gen.add("pick", str_t, 0, "Pick flag interlock", False) # initial state
-gen.add("dock", str_t, 0, "Dock flag interlock", False)
-gen.add("undock", str_t, 0, "Undock flag interlock", False)
-gen.add("place", str_t, 0, "Place flag interlock", False)
-gen.add("home", str_t, 0, "Home flag interlock", True) # prerequisite to initial state
-gen.add("return", str_t, 0, "Return flag interlock", True) # prerequisite to initial state
+gen.add("pick", bool_t, 0, "Pick flag interlock", False) # initial state
+gen.add("dock", bool_t, 0, "Dock flag interlock", False)
+gen.add("undock", bool_t, 0, "Undock flag interlock", False)
+gen.add("place", bool_t, 0, "Place flag interlock", False)
+gen.add("home", bool_t, 0, "Home flag interlock", True) # prerequisite to initial state
+gen.add("return", bool_t, 0, "Return flag interlock", True) # prerequisite to initial state
 
 exit(gen.generate(PACKAGE, "dock_undock_server", "dynamic_params"))
