--- a/cfg/dynamic_params.cfg
+++ b/cfg/dynamic_params.cfg
@@ -5,7 +5,7 @@ PACKAGE = "fms_rob"
 from dynamic_reconfigure.parameter_generator_catkin import *
  
 gen = ParameterGenerator()
-gen.add("cart_id", str_t, 0, "Cart id for docking", "KLT_1_neu") # default KLT_1_neu
+gen.add("cart_id", str_t, 0, "Cart id for docking", "KLT_1_neu") # Never change cart_id during operation!
 gen.add("pick", bool_t, 0, "Pick flag interlock", False) # initial state
 gen.add("dock", bool_t, 0, "Dock flag interlock", False)
 gen.add("undock", bool_t, 0, "Undock flag interlock", False)
