return pose dynamic parameter added to cfg

--- a/cfg/dynamic_params.cfg
+++ b/cfg/dynamic_params.cfg
@@ -6,6 +6,12 @@ from dynamic_reconfigure.parameter_generator_catkin import *
  
 gen = ParameterGenerator()
 gen.add("cart_id", str_t, 0, "Cart id for docking", "KLT_1_neu") # Never change cart_id during operation!
+gen.add("return_pose_trans_x", double_t, 0, "return pose of picked cart", 0.0)
+gen.add("return_pose_trans_y", double_t, 0, "return pose of picked cart", 0.0)
+gen.add("return_pose_rot_x", double_t, 0, "return pose of picked cart", 0.0)
+gen.add("return_pose_rot_y", double_t, 0, "return pose of picked cart", 0.0)
+gen.add("return_pose_rot_z", double_t, 0, "return pose of picked cart", 0.0)
+gen.add("return_pose_rot_w", double_t, 0, "return pose of picked cart", 0.0)
 gen.add("pick", bool_t, 0, "Pick flag interlock", False) # initial state
 gen.add("dock", bool_t, 0, "Dock flag interlock", False)
 gen.add("undock", bool_t, 0, "Undock flag interlock", False)
