dock pose server modified to eliminate vicon topic bug - trial 1

--- a/cfg/dynamic_params.cfg
+++ b/cfg/dynamic_params.cfg
@@ -15,7 +15,7 @@ gen.add("pick", bool_t, 0, "Pick flag interlock", False) # initial state
 gen.add("dock", bool_t, 0, "Dock flag interlock", False)
 gen.add("undock", bool_t, 0, "Undock flag interlock", False)
 gen.add("place", bool_t, 0, "Place flag interlock", False)
-gen.add("home", bool_t, 0, "Home flag interlock", True) # prerequisite to initial state
-gen.add("return", bool_t, 0, "Return flag interlock", True) # prerequisite to initial state
+gen.add("home", bool_t, 0, "Home flag interlock", False) # prerequisite to initial state
+gen.add("return", bool_t, 0, "Return flag interlock", False) # prerequisite to initial state
 
 exit(gen.generate(PACKAGE, "dock_undock_server", "dynamic_params"))
