--- a/package.xml
+++ b/package.xml
@@ -4,11 +4,11 @@
   <version>0.2.1</version>
   <description>The fms_rob package</description>
 
-  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
+  <maintainer email="hazem.youssef@tu-dortmund.de">Hazem Youssef</maintainer>
 
   <license>BSD</license>
 
-  <author email="rnavarro@robotnik.es">Román Navarro</author>
+  <author email="hazem.youssef@tu-dortmund.de">Hazem Youssef</author>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
